...
                      Container(
                        alignment: Alignment.center,
                        child: Column(
                          mainAxisAlignment: MainAxisAlignment.center,
                          children: <Widget>[
                            ElevatedButton(
                              key: const ValueKey('galleryKey'),
                              onPressed: () async {
                                String path = await ImagePickerHelper()
                                    .getImageFrom(ImageSource.gallery);
                                setState(() {
                                  fileType = 'images';
                                  filePath = path;
...
                          File(filePath),
                          fit: BoxFit.scaleDown,
                          height: 300,
                          width: 300,
                        ),
                        ElevatedButton(
                            key: const ValueKey('uploadKey'),
                            onPressed: () async {
                              String result = await FirebaseApi()
                                  .uploadFile(filePath, widget.betID, fileType);
                              if (result != 'error') {
                                Provider.of<BetProvider>(context, listen: false)
                                    .updateBetFile(widget.betID, result);
...
