...
          AssetImage(Provider.of<BetProvider>(context)
              .getIconOfAction(betItem.action)),
        ),
      ),
      title: Text(betItem.action),
      subtitle: InkWell(
        key: const ValueKey('betDetails'),
        child: Row(
          mainAxisAlignment: MainAxisAlignment.spaceBetween,
          children: [
            Text("Time: ${betItem.time.format(context)}"),
            overview
                ? Text(
...
