...

  Widget valueInput() {
    return SizedBox(
      height: 40.0.h,
      width: 90.0.w,
      child: TextField(
        key: const ValueKey('betValueField'),
        onSubmitted: (text) => {
          // TODO How to disallow - , .
          _value = int.parse(text),
        },
        keyboardType: TextInputType.number,
        inputFormatters: <TextInputFormatter>[
...
